# lostnfound

./: .gitignore  .gitmodules  CMakeLists.txt  LostNFound.data  LostNFound.js  LostNFound.wasm  animation_system.hpp  area.hpp  camera.hpp  camera_update.hpp  circle.hpp  course.hpp  curve.hpp  file_system.hpp  game_loop_system.hpp  index.html  input_system.hpp  main.cpp  map.hpp  minimap.hpp  player.hpp  random.hpp  render_system.hpp  scene.hpp  spawning_system.hpp  sprite.hpp  tilemap.hpp  visibility.hpp  visibility_system.hpp  window_system.hpp
.github/workflows/: main.yml
assets/: lakes.data
shaders/: bezier_2d_f.glsl  bezier_2d_v.glsl  raycast_2d_f.glsl  raycast_2d_v.glsl  texture_2d_f.glsl  texture_2d_v.glsl  texture_framebuffer_2d_v.glsl
src/: main.cpp
src/camera/: camera.hpp  camera_update.hpp
src/components/: all_components.hpp  animated_object.hpp  blocking_object.hpp  camera_object.hpp  collision_object.hpp  color_object.hpp  component.hpp  controllable_object.hpp  drawable_object.hpp  dynamic_object.hpp  entity_system.hpp  geometry_object.hpp  gpu_program.hpp  hidden_object.hpp  init_object.hpp  layered_object.hpp  minimap_object.hpp  movable_object.hpp  scene_object.hpp  spawner_object.hpp  stateful_object.hpp  text_object.hpp  textured_object.hpp  touch_object.hpp  transform_object.hpp
src/course/: course.hpp
src/game_objects/: camera.hpp  course.hpp  fog.hpp  following_camera.hpp  lake.hpp  player.hpp  raycast_provider.hpp  river.hpp  sprite.hpp  tilemap.hpp
src/geometry/: area.hpp  circle.hpp  curve.hpp  polygon.hpp  quad.hpp  triangle.hpp  (+1 more)
(+31 files in other folders)
